# skye-nthesiser

./: .gitmodules  CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md
interface/: LabelledRotaryControl.cpp  LabelledRotaryControl.h  WaveformSelector.cpp  WaveformSelector.h
modulation/: Modulatable.h
synth/: Synth.h  SynthEngine.cpp  SynthEngine.h
